log
Fri, May  2, 2025 11:00:16 AM: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
5729e4d
Fri, May  2, 2025 11:00:46 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
6a62ea9
Fri, May  2, 2025 11:19:02 AM: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:76:8: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
   76 |     if(tree->root = NULL) return NULL;
      |        ^~~~
treemap.c:83:53: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Wint-conversion]
   83 |         if(tree->lower_than(key, current->pair->key < 0)) current = current->left;
      |                                  ~~~~~~~~~~~~~~~~~~~^~~
      |                                                     |
      |                                                     int
treemap.c:83:53: note: expected 'void *' but argument is of type 'int'
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
0529a90
Fri, May  2, 2025 11:20:03 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:83:53: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Wint-conversion]
   83 |         if(tree->lower_than(key, current->pair->key < 0)) current = current->left;
      |                                  ~~~~~~~~~~~~~~~~~~~^~~
      |                                                     |
      |                                                     int
treemap.c:83:53: note: expected 'void *' but argument is of type 'int'
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
683985a
Fri, May  2, 2025 11:21:45 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:83:53: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Wint-conversion]
   83 |         if(tree->lower_than(key, current->pair->key < 0)) current = current->left;
      |                                  ~~~~~~~~~~~~~~~~~~~^~~
      |                                                     |
      |                                                     int
treemap.c:83:53: note: expected 'void *' but argument is of type 'int'
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
3489203
Fri, May  2, 2025 11:21:50 AM: 
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:83:53: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Wint-conversion]
   83 |         if(tree->lower_than(key, current->pair->key < 0)) current = current->left;
      |                                  ~~~~~~~~~~~~~~~~~~~^~~
      |                                                     |
      |                                                     int
treemap.c:83:53: note: expected 'void *' but argument is of type 'int'
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
8ef012e
Fri, May  2, 2025 11:23:45 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
6fea547
